; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_purgable_control.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_purgable_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_MAP_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@VM_PURGABLE_SET_STATE_FROM_KERNEL = common dso_local global i64 0, align 8
@PAGE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_vm_purgable_control(i64 %0, i32 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i64, i64* @VM_MAP_NULL, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %14, i32* %5, align 4
  br label %29

15:                                               ; preds = %4
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* @VM_PURGABLE_SET_STATE_FROM_KERNEL, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %20, i32* %5, align 4
  br label %29

21:                                               ; preds = %15
  %22 = load i64, i64* %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* @PAGE_MASK, align 4
  %25 = call i32 @vm_map_trunc_page(i32 %23, i32 %24)
  %26 = load i64, i64* %8, align 8
  %27 = load i32*, i32** %9, align 8
  %28 = call i32 @vm_map_purgable_control(i64 %22, i32 %25, i64 %26, i32* %27)
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %21, %19, %13
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @vm_map_purgable_control(i64, i32, i64, i32*) #1

declare dso_local i32 @vm_map_trunc_page(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
